--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							</div>
 						</a> <!-- #branding -->
 						
-						<div class="location" style="display: inline-block; vertical-align: top; margin-left: 20px; position: absolute; top: 30px; right: 700px">
+						<div class="location" style="display: inline-block; vertical-align: top; margin-left: 20px; position: relative; top: 25px; left: 75px; ">
 							<img src="icon-location.png" class="icon" alt="Location" style="vertical-align: middle; margin-right: 5px;" height="25" width="25">
 							<span>2 Automatic Rd Unit #214, Brampton, Ontario, L6S6K9, Canada</span>
 						</div>
@@ -50,7 +50,7 @@
 						
 						<div class="mobile-navigation"></div>
 
-						<div class="right-section pull-right" style="position: absolute; top: 30px; right: 150px">
+						<div class="right-section pull-right" style="position: relative; top: 25px; left: 450px">
                         <a href="#" class="phone"><img src="images/icon-phone.png" class="icon"> (647) - 969 - 1477 </a>
                     </div>
 					</div> <!-- .container -->
@@ -246,12 +246,12 @@
 
 				<div class="col-md-9" style="margin-bottom: 50px; margin-top: 50px;">
 					<h2 class="section-title text-center" style="position: relative; left: 200px;">Contact form</h2>
-					<form action="#" class="contact-form">
+					<form action="#" class="contact-form" >
 						<div class="row">
 							<div class="col-md-6"><input type="text" placeholder="Your name..."></div>
 							<div class="col-md-6"><input type="text" placeholder="Email..."></div>
 							<!-- <div class="col-md-4"><input type="text" placeholder="Website..."></div> -->
-						</div>
+						</div >
 	
 						<textarea  placeholder="Message..."></textarea>
 	
