--- a/index.html
+++ b/index.html
@@ -47,12 +47,11 @@
 							<a href="#"><i class="fa fa-google-plus"></i></a>
 							<a href="#"><i class="fa fa-pinterest"></i></a>
 						</div>
-						
-						<div class="mobile-navigation"></div>
+						<div class="right-section" style="left: 43%; top: 25px;">
+                        	<a href="#" class="phone"><img src="images/icon-phone.png" class="icon"> (647) - 969 - 1477 </a>
+                    	</div>
 
-						<div class="right-section pull-right" style="position: relative; top: 25px; left: 450px">
-                        <a href="#" class="phone"><img src="images/icon-phone.png" class="icon"> (647) - 969 - 1477 </a>
-                    </div>
+						<div class="mobile-navigation"></div>
 					</div> <!-- .container -->
 				</div> <!-- .top-header -->
 
