--- a/index.html
+++ b/index.html
@@ -359,9 +359,10 @@
 
 				<div class="contact-info">
 					<h3>Contact Information</h3>
-					<p>Address: 2 Automatic Rd Unit #214, Brampton, Ontario, L6S6K9, Canada</p>
+					<img src="card_manu.jpg">
+					<!-- <p>Address: 2 Automatic Rd Unit #214, Brampton, Ontario, L6S6K9, Canada</p>
 					<p>Phone: +1 647 969 1477</p>
-					<p>Email: <a href="mailto:info@manjitbhinder.ca">info@manjitbhinder.ca</a></p>
+					<p>Email: <a href="mailto:info@manjitbhinder.ca">info@manjitbhinder.ca</a></p> -->
 				</div>
 
 				<div id='contact' class="contact-form-container">
@@ -371,7 +372,7 @@
 							<div class="row">
 								<div class="col-md-4"><input type="text" placeholder="Your name..."></div>
 								<div class="col-md-4"><input type="text" placeholder="Email..."></div>
-								<div class="col-md-4"><input type="text" placeholder="Subject..."></div>
+								<div class="col-md-4"><input type="text" placeholder="Phone..."></div>
 							</div>
 
 							<textarea  placeholder="Message..."></textarea>
